Improved support for String-values when coercing a number out of an object